      static method localtime : Sys::Time::Tm ($time_ref : long*);
      
    * The definition of the gmtime method in the Sys::Time is changed.
      [Before]
      static method gmtime : Sys::Time::Tm ($time : long);
      [After]
      static method gmtime : Sys::Time::Tm ($time_ref : long*);
    *  close-on-exec flag is set to the file stream opened by the open method in the Sys class.
  [New Features]
    * Add the popen method to the Sys::IO class.
    * Add the _popen method to the Sys::IO class.
    * Add the popen method to the Sys class
    * Add the pclose method to the Sys::IO class.
    * Add the _pclose method to the Sys::IO class.
    * Add the pclose method to the Sys class.
    * Add the fork method to the Sys class.
    * Add the getpriority method to the Sys class.
    * Add the setpriority method to the Sys class.
    * Add the wait method to the Sys class.
    * Add the waitpid method to the Sys class.
0.505 2023-11-30
  [Incompatible Changes]
    * The timeval_interval method in the Sys::Time::Util do not throw an exception if tv_sec and tv_usec is a negative value.
    * The timespec_interval method in the Sys::Time::Util do not throw an exception if tv_sec and tv_nsec is a negative value.
  [New Features]
    * Add the subtract_timeval method to the Sys::Time::Util.
    * Add the subtract_timespec method to the Sys::Time::Util.
    
0.504 2023-11-28
  [Incompatible Changes]
    * Remove the set method in the Sys::Select::Fd_set class.
  [New Features]
    * Add Sys::Time::Util class.
    * Add the clone method to the Sys::Select::Fd_set class.
0.503 2023-11-28
  [Bug Fix]
    * Fix a bug that the compilation of the Sys::IO::Dirent failed becuase cygwin do not have d_reclen in struct dirent.
  [New Features]
    * Add the d_off method to the Sys::IO::Dirent class.
    * Add the d_type method to the Sys::IO::Dirent class.
    * Add the utimes method to the Sys::IO class.