@@ -166,9 +166,14 @@ int32_t SPVM__Sys__Process__system(SPVM_ENV* env, SPVM_VALUE* stack) {
     command = env->get_chars(env, stack, obj_command);
   }
   
-  int32_t status = system(command);
+  int32_t wstatus = system(command);
   
-  stack[0].ival = status;
+  if (status == -1) {
+    env->die(env, stack, "[System Error]system failed:%s", env->strerror(env, stack, errno, 0), __func__, FILE_NAME, __LINE__);
+    return SPVM_NATIVE_C_BASIC_TYPE_ID_ERROR_SYSTEM_CLASS;
+  }
+  
+  stack[0].ival = wstatus;
   
   return 0;
 }
