@@ -12,6 +12,8 @@
       [After]
       static method gmtime : Sys::Time::Tm ($time_ref : long*);
     *  close-on-exec flag is set to the file stream opened by the open method in the Sys class.
+  [Changes]
+    * The system method in the Sys::Process class throwns an exception if the system system call fail.
   [New Features]
     * Add the popen method to the Sys::IO class.
     * Add the _popen method to the Sys::IO class.
